MIT Licenses and Analytics and refactoring, oh my!

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-Generally, I'd say my experiments in the lab are under the MIT license
-unless otherwise specified. I'd like attribution but I don't really care. :)
+Brian Arnold's Lab
+
+Hello! Welcome to my experimental place. All code under this area is
+licensed under the MIT license, which should remain available via
+http://www.randomthink.net/lab/LICENSE for a long time.
