Tweaking the text to reflect the naming convention I prefer these days

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Brian Arnold's Lab
+RandomThink.net Labs
 
 Hello! Welcome to my experimental place. All code under this area is
 licensed under the MIT license, which should remain available via
